PROD-9-26-19/force-app/main/default/objects/Case/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <description>Date that the project actually is completed</description>
    <inlineHelpText>Actual completion Date</inlineHelpText>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>