PROD-9-26-19/force-app/main/default/objects/Case/fields/BAC__c.field-meta.xml
<CustomField>
    <fullName>BAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAC</label>
    <type>Checkbox</type>
</CustomField>