PROD-9-26-19/force-app/main/default/objects/Case/fields/BIG_1__c.field-meta.xml
<CustomField>
    <fullName>BIG_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Infrastructure, Investor Relations</inlineHelpText>
    <label>BIG</label>
    <type>Checkbox</type>
</CustomField>