PROD-9-26-19/force-app/main/default/objects/Case/fields/BRP__c.field-meta.xml
<CustomField>
    <fullName>BRP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRP</label>
    <type>Checkbox</type>
</CustomField>