PROD-9-26-19/force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Used by PSG inquiries</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP/DDQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>