PROD-9-26-19/force-app/main/default/objects/Case/fields/First_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS: Created to check first response when user reply to email from case. PB will flag this field.</description>
    <label>First Response</label>
    <type>Checkbox</type>
</CustomField>