PROD-9-26-19/force-app/main/default/objects/Case/fields/On_The_Roadmap__c.field-meta.xml
<CustomField>
    <fullName>On_The_Roadmap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On The Roadmap</label>
    <type>Checkbox</type>
</CustomField>