PROD-9-26-19/force-app/main/default/objects/Case/fields/PMT_Owner__c.field-meta.xml
<CustomField>
    <fullName>PMT_Owner__c</fullName>
    <description>Other owners for the Investor Request cases</description>
    <inlineHelpText>Other owners for the Investor Request cases</inlineHelpText>
    <label>PMT Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>