PROD-9-26-19/force-app/main/default/objects/Case/fields/PSG_Marketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>PSG_Marketing_Lead__c</fullName>
    <formula>Account.BIM_Primary_Mktg_Rep__r.Full_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSG Marketing Lead</label>
    <type>Text</type>
</CustomField>