PROD-9-26-19/force-app/main/default/objects/Case/fields/Record_Type_for_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_for_Snapshot__c</fullName>
    <formula>IF(RecordTypeId =&quot;012c00000005FTF&quot;, &quot;Data User Report Dashboard&quot;,
IF(RecordTypeId =&quot;012c00000005FTC&quot;, &quot;Enhancement request&quot;,
IF(RecordTypeId =&quot;012c00000005FTD&quot;, &quot;Quick Change&quot;,
IF(RecordTypeId =&quot;012c00000005FTE&quot;, &quot;Support&quot;, &quot;None&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type for Snapshot</label>
    <type>Text</type>
</CustomField>