PROD-9-26-19/force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-hoc/Follow-up Questions</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Legal/Compliance/Tax Questions</fullName>
            </value>
            <value>
                <fullName>Marketing Materials</fullName>
            </value>
            <value>
                <fullName>Operational DDQ/RFI/RFP</fullName>
            </value>
            <value>
                <fullName>Qualitative DDQ/RFI/RFP</fullName>
            </value>
            <value>
                <fullName>Quantitative DDQ/RFI/RFP</fullName>
            </value>
            <value>
                <fullName>Quarterly/Recurring Request</fullName>
            </value>
            <value>
                <fullName>Schedule Meeting/Call</fullName>
            </value>
            <value>
                <fullName>Initial RFI</fullName>
                <isActive>false</isActive>
                <label>Initial RFI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>