PROD-9-26-19/force-app/main/default/objects/Case/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <inlineHelpText>What sandbox is this set up in?</inlineHelpText>
    <label>Sandbox</label>
    <length>15</length>
    <type>Text</type>
</CustomField>