PROD-9-26-19/force-app/main/default/objects/Case/fields/Subject_Matter_Expert__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ubject Matter Expert field to be used on Email to Case (PSG Inquiries)</description>
    <label>Subject Matter Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>