PROD-9-26-19/force-app/main/default/objects/Case/fields/System_Add_ons__c.field-meta.xml
<CustomField>
    <fullName>System_Add_ons__c</fullName>
    <description>For Projects - the &quot;System Add&#39;ons&quot; column within the report</description>
    <inlineHelpText>Enter the type of system or the actual name of system for this project.</inlineHelpText>
    <label>System Add-ons</label>
    <type>TextArea</type>
</CustomField>