PROD-9-26-19/force-app/main/default/objects/Case/fields/Task_Owners_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Task_Owners_Text_Field__c</fullName>
    <description>Provide initials/acronyms of individuals who will be completing these projects</description>
    <inlineHelpText>Provide initials/acronyms of individuals who will be completing these projects</inlineHelpText>
    <label>Task Owners - Text Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>