PROD-9-26-19/force-app/main/default/objects/Case/fields/User_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Assignment_Date__c</fullName>
    <description>This Field is used to track the assignment date for new Salesforce user.</description>
    <inlineHelpText>New Salesforce Licence assignment date</inlineHelpText>
    <label>User Assignment Date</label>
    <type>DateTime</type>
</CustomField>