PROD-9-26-19/force-app/main/default/objects/Case/fields/User_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivation_Date__c</fullName>
    <description>This Field is used to track the deactivation date from Salesforce</description>
    <inlineHelpText>Salesforce Licence Deactivation date</inlineHelpText>
    <label>User Deactivation Date</label>
    <type>DateTime</type>
</CustomField>