PROD-9-26-19/force-app/main/default/objects/Case/recordTypes/data_user_report_dashboard.recordType-meta.xml
<RecordType>
    <fullName>data_user_report_dashboard</fullName>
    <active>true</active>
    <businessProcess>Admin Change Management</businessProcess>
    <description>Data loading or change to an existing or a new report or dashboard</description>
    <label>Data User Report Dashboard</label>
</RecordType>