PROD-9-26-19/force-app/main/default/objects/Case/recordTypes/Investor_Requests.recordType-meta.xml
<RecordType>
    <fullName>Investor_Requests</fullName>
    <active>true</active>
    <businessProcess>Investor Request</businessProcess>
    <label>Requests</label>
</RecordType>