PROD-9-26-19/force-app/main/default/objects/Case/validationRules/Request_Type_Require_on_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Type_Require_on_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Complete&quot;) &amp;&amp;  ISPICKVAL( Request_Type__c, &quot;&quot; ) &amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;PSG_Inquiries&quot;</errorConditionFormula>
    <errorDisplayField>Request_Type__c</errorDisplayField>
    <errorMessage>Request Type must be populated.</errorMessage>
</ValidationRule>