PROD-9-26-19/force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Secondary_Owner__c</columns>
    <columns>Third_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.PSG_Inquiries</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>All Closed PSG Cases</label>
    <sharedTo>
        <role>BIM</role>
        <role>BIM_Exec</role>
        <role>BIM_Portfolio_Manager</role>
        <role>PSG_ALTS</role>
    </sharedTo>
</ListView>