PROD-9-26-19/force-app/main/default/objects/Case/listViews/All_Open_PSG_Inquiries_Canada.listView-meta.xml
<ListView>
    <fullName>All_Open_PSG_Inquiries_Canada</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Secondary_Owner__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>All Open PSG Inquiries - Canada</label>
    <queue>PSG_Inquiries_Canada</queue>
    <sharedTo>
        <role>BIM</role>
        <role>BIM_Exec</role>
        <role>BIM_Portfolio_Manager</role>
        <role>PSG_ALTS</role>
    </sharedTo>
</ListView>