PROD-9-26-19/force-app/main/default/objects/Case/listViews/My_Closed_Case.listView-meta.xml
<ListView>
    <fullName>My_Closed_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Closed Cases</label>
    <sharedTo>
        <role>PFG</role>
    </sharedTo>
</ListView>