PROD-9-26-19/force-app/main/default/objects/Case/listViews/PFG_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>PFG_Closed_Cases</fullName>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>Task_Owners_Text_Field__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Assessment_of_Difficulty__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Anticipated_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>New,In Progress</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>BLP Support</value>
    </filters>
    <label>PFG - Closed Cases</label>
    <sharedTo>
        <role>PFG_Salesforce_Support</role>
        <role>PFG_Salesforce_Support_Team</role>
    </sharedTo>
</ListView>