PROD-9-26-19/force-app/main/default/objects/Case/listViews/Promotion_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Promotion_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Promotion Queue</label>
    <queue>Promotion_Queue</queue>
    <sharedTo>
        <role>BAM_TSG_Data_Archive</role>
        <role>PFG_Salesforce_Support</role>
        <role>PFG_Salesforce_Support_Team</role>
    </sharedTo>
</ListView>